<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="InputOutput" Id="{3bfff44a-42d8-4e67-8a72-cea7f144b7e9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	SignalStatusRed AT %Q* : BOOL;
	SignalStatusYellow AT %Q* : BOOL;
	SignalStatusGreen AT %Q* : BOOL;
	TurnTableMotorTurn AT %Q* : BOOL;
	TurnTableMotorReverse AT %Q* : BOOL;
	ConvaorbeltMotorRun AT %Q* : BOOL;
	ConvaorbeltMotorReverse AT %Q* : BOOL;
	QuittierenLamp AT %Q* : BOOL;
	OnOffStatusLamp AT %Q* : BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>